--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-multipart = "^0.0.9"
 requests = "^2.31.0"
 cryptography = "^42.0.5"
 python-dotenv = "^1.0.1"
+uvicorn = "^0.29.0"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
