--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   db:
-    image: postgres:16
+    build: ./db
+    image: njerucyrus/smart_vendor:db
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
